# CIGame_pack_creating_bot

./: .gitignore  Dockerfile  Pipfile  README.md  bot.py  config.py  docker-compose.yaml  dodo.py  pyproject.toml  token.env
docs/source/: bot_docs.rst  conf.py  index.rst  xml_parser_docs.rst
source/: bot.py  config.py  l10n.py  requirements.txt  tests.py  xml-parser.py  xml_parser.py
source/sample_pack/: content.xml
source/source/: bot_docs.rst  conf.py  index.rst  xml_parser_docs.rst
source/translation/en/LC_MESSAGES/: l10n.po
